--- a/style.css
+++ b/style.css
@@ -1,102 +1,114 @@
-#websweeper > table td{
-    background-color: #342e44;
-    width: 70px;
-    height: 70px;
-    border: 1px black solid;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    gap: 0;
-    text-align: center;
+#websweeper > table td {
+      background-color: #342e44;
+      width: 70px;
+      height: 70px;
+      border: 1px black solid;
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
+      gap: 0;
+      text-align: center;
 }
 
-#websweeper > table{
-    border-spacing: 0px 0;
-    border: 7px solid black;
-    position: relative;
+#websweeper > table {
+      border-spacing: 0px 0;
+      border: 7px solid black;
+      position: relative;
 }
 
-.formated{
-    font-size: 40px;
-    margin: 0px;
-    padding: 0px;
-    font-weight: 800;
-    font-family: monospace;
-    text-shadow: 1px 2px 1px #0d0324;
-    opacity: 0;
+.formated {
+      font-size: 40px;
+      margin: 0px;
+      padding: 0px;
+      font-weight: 800;
+      font-family: monospace;
+      text-shadow: 1px 2px 1px #0d0324;
+      opacity: 0;
 }
 
-.flagged{
-    background-color: red !important; 
-    /* background-image: url('flag.jpg'); */
+.flagged {
+      background-color: red !important;
+      /* background-image: url('flag.jpg'); */
 }
 
-.revealed{
-    background-color: rgb(189, 187, 196) !important;
+.revealed {
+      background-color: rgb(189, 187, 196) !important;
 }
 
-.menu{
-    background-color: rgb(165, 154, 180);
-    width: 500px;
-    height: 400px;
-    position: absolute;
-    top: 120px;
-    left: 115px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.menu {
+      background-color: rgb(165, 154, 180);
+      width: 500px;
+      height: 400px;
+      position: absolute;
+      top: 120px;
+      left: 115px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 }
-#overlayBox{
-    height: 714px;
-    width: 714px;
-    background-color: rgba(57, 52, 61, 0.507);
-    position: absolute;
-    z-index: 1;
+#overlayBox {
+      height: 714px;
+      width: 714px;
+      background-color: rgba(57, 52, 61, 0.507);
+      position: absolute;
+      z-index: 1;
 }
-#lostMenuBox{
-    height: 400px;
-    width: 500px;
-    background-color: rgb(233, 88, 69);
-    position: absolute;
-    top: 150px;
-    left: 115px;
-    text-align: center;
-}
-
-#wonMenuBox{
-    height: 400px;
-    width: 500px;
-    background-color: rgb(26, 175, 155);
-    position: absolute;
-    top: 150px;
-    left: 115px;
-    text-align: center;
+#lostMenuBox {
+      height: 400px;
+      width: 500px;
+      background-color: rgb(233, 88, 69);
+      position: absolute;
+      top: 150px;
+      left: 115px;
+      text-align: center;
 }
 
-#mainMenuBox{
-    height: 400px;
-    width: 500px;
-    background-color: rgb(122, 167, 96);
-    position: absolute;
-    top: 150px;
-    left: 115px;
-    text-align: center;
+#wonMenuBox {
+      height: 400px;
+      width: 500px;
+      background-color: rgb(26, 175, 155);
+      position: absolute;
+      top: 150px;
+      left: 115px;
+      text-align: center;
 }
 
-#websweeper button{
-    width: 100px;
-    height: 100px;
-    border-radius: 0;
-    background-color: rgb(165, 154, 180);
-    font-size: 2rem;
+#mainMenuBox {
+      height: 400px;
+      width: 500px;
+      background-color: rgb(122, 167, 96);
+      position: absolute;
+      top: 150px;
+      left: 115px;
+      text-align: center;
 }
 
-#startBtn:hover{
-    background-color: #0d0324;
-    color: white;
+#websweeper #difficultySelect {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: rgb(165, 154, 180);
+      width: 100px;
+      height: 40px;
+      margin-bottom: 10px;
 }
 
-#websweeper h2{
-    font-size: 3rem;
-    color: white;
+#websweeper #startBtn,
+#websweeper #retryBtn {
+      min-width: 100px;
+      height: 100px;
+      border-radius: 0;
+      background-color: rgb(165, 154, 180);
+      font-size: 2rem;
+}
+
+#websweeper #startBtn:hover,
+#websweeper #retryBtn:hover {
+      background-color: #0d0324;
+      color: white;
+}
+
+#websweeper h2 {
+      font-size: 3rem;
+      color: white;
 }
