--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-:root {
+#websweeper {
       --websweeperSize: 800px;
+      /* ![BUG] Nu merge fontul pe butoane */
+      font-family: Tahoma;
 }
 
 #websweeper > table td {
@@ -26,7 +28,6 @@
       margin: 0px;
       padding: 0px;
       font-weight: 800;
-      font-family: monospace;
       text-shadow: 1px 2px 1px #0d0324;
       opacity: 0;
 }
